kubernetes/apps/storage/media-kantai1/smb/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: media-kantai1-smb
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: media-kantai1-smb
  egress:
    - toCIDR:
        - 192.168.1.0/24
      toPorts:
        - ports:
            - port: "445"
              protocol: ANY
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "445"
              protocol: ANY
  ingress:
    - fromCIDR:
        - 192.168.1.0/24
      toPorts:
        - ports:
            - port: "445"
              protocol: ANY
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "445"
              protocol: ANY
